pyqt5 (5.12.3+dfsg-2) UNRELEASED; urgency=medium

  * Use debhelper-compat instead of debian/compat.
  * Bump Standards-Version to 4.4.0.

 -- Ondřej Nový <onovy@debian.org>  Sat, 20 Jul 2019 00:19:34 +0200

pyqt5 (5.12.3+dfsg-1) experimental; urgency=medium

  * New upstream release.
  * Refresh debian/patches/public_sip.diff.
  * Backport upstream patch to fix building with Python 2.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 03 Jul 2019 21:22:54 +0300

pyqt5 (5.12.2+dfsg-1) experimental; urgency=medium

  * New upstream release.
  * Refresh debian/patches/public_sip.diff.

 -- Dmitry Shachnev <mitya57@debian.org>  Fri, 24 May 2019 17:40:13 +0300

pyqt5 (5.12.1+dfsg-1) experimental; urgency=medium

  * New upstream release.
  * Update debian/watch for another upstream change.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 27 Mar 2019 22:02:10 +0300

pyqt5 (5.12+dfsg-1) experimental; urgency=medium

  [ Bastian Germann ]
  * Provide dist-info metadata (closes: #890200; LP: #1814019).

  [ Scott Kitterman ]
  * Remove myself from uploaders

  [ Dmitry Shachnev ]
  * Build the tools for all supported Python 3 versions.
  * Bump Standards-Version to 4.3.0, no changes needed.
  * Update debian/watch to use the new tarballs location.
  * New upstream release.
  * Refresh debian/patches/public_sip.diff.
  * Drop Qt WebEngine packages, they are now in a separate source.
  * Update debian/copyright.
  * Bump sip build-dependencies to 4.19.14, following configure.py.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 06 Mar 2019 14:34:54 +0300

pyqt5 (5.11.3+dfsg-1) unstable; urgency=medium

  [ Ondřej Nový ]
  * d/watch: Use https protocol

  [ Dmitry Shachnev ]
  * New upstream release.
  * Update public_sip.diff, revert some more upstream changes.
  * Do not override default dh_builddeb parameters.
  * Install both upstream changelog and NEWS, per Policy 12.7.
  * Bump Standards-Version to 4.2.1, no changes needed.
