@@ -1,29 +1,36 @@
 From: Dmitry Shachnev <mitya57@debian.org>
-Date: Wed, 3 Jul 2019 21:52:10 +0300
+Date: Mon, 2 Sep 2019 15:51:37 +0300
 Subject: Fixes for building against Python v2
 
-Origin: upstream, changeset e5dd514fdba6
+Origin: upstream, changesets e5dd514fdba6 and 81b34c9373b6.
 ---
- qpy/QtCore/qpycore_qstring.cpp | 9 ++++++++-
- 1 file changed, 8 insertions(+), 1 deletion(-)
+ qpy/QtCore/qpycore_qstring.cpp | 14 +++++++++++++-
+ 1 file changed, 13 insertions(+), 1 deletion(-)
 
 diff --git a/qpy/QtCore/qpycore_qstring.cpp b/qpy/QtCore/qpycore_qstring.cpp
-index 2d04e3a..3897c3b 100644
+index 2d04e3a..4a188ce 100644
 --- a/qpy/QtCore/qpycore_qstring.cpp
 +++ b/qpy/QtCore/qpycore_qstring.cpp
-@@ -161,7 +161,14 @@ PyObject *qpycore_PyObject_FromQString(const QString &qstr)
- // Convert a Python Unicode object to a QString.
+@@ -158,9 +158,21 @@ PyObject *qpycore_PyObject_FromQString(const QString &qstr)
+ }
+ 
+ 
+-// Convert a Python Unicode object to a QString.
++// Convert a Python string object to a QString.
  QString qpycore_PyObject_AsQString(PyObject *obj)
  {
--#if defined(PYQT_PEP_393)
-+#if PY_MAJOR_VERSION <= 2
-+    const char *obj_s = PyString_AsString(obj);
++#if PY_MAJOR_VERSION < 3
++    if (PyString_Check(obj))
++    {
++        const char *obj_s = PyString_AsString(obj);
 +
-+    if (!obj_s)
-+        return QString();
++        if (!obj_s)
++            return QString();
 +
-+    return QString::fromUtf8(obj_s);
-+#elif defined(PYQT_PEP_393)
++        return QString::fromUtf8(obj_s);
++    }
++#endif
++
+ #if defined(PYQT_PEP_393)
      int char_size;
      Py_ssize_t len;
-     void *data = sipUnicodeData(obj, &char_size, &len);
