@@ -1,7 +1,11 @@
 pyqt5 (5.12.3+dfsg-2) UNRELEASED; urgency=medium
 
+  [ Ondřej Nový ]
   * Use debhelper-compat instead of debian/compat.
   * Bump Standards-Version to 4.4.0.
+
+  [ Dmitry Shachnev ]
+  * Update python2_qstring.diff with the latest changes from upstream.
 
  -- Ondřej Nový <onovy@debian.org>  Sat, 20 Jul 2019 00:19:34 +0200
 
